dt-assets/scss/_main.scss
/* ... */
html[dir="rtl"] #top-bar-menu {
    .dropdown.menu>li.is-dropdown-submenu-parent>a:after {
        left: 5px;
        right: auto;
    }
}

.notifications-menu-item .notification-count {
    display: none;
    vertical-align: top;
    position: relative;
    top: -5px;
    margin-left:-15px;
}
.notification-count-offcanvas {
    display: none;
    vertical-align: middle;
    position: relative;
    top: 0;
    margin-left:10px;
}
.top-bar .is-submenu-item {
    background-color: #3f729b;
    text-align: left;
    a {
        vertical-align: middle;
        color: white;
        font-weight: 700;
        img {
            width:25px; margin:0 10px 0 0
        }
    }
}

nav.second-bar {
    padding: 0.5em;
    background-color: white;
    width: 100%;
    top: auto;
    transform: translateX(0);

    .title {
        font-weight: bold;
    }

    .breadcrumbs {
        margin-bottom: 0;
    }
    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);

    .buttons-row {
        display: flex;
        justify-content: center;
        column-gap: 0.3rem
    }

    .button {
        img {
            height: 17px;
            padding-right: 5px;
        }
        padding: 0.4em 0.75em;

        @media screen and (max-width : 639px) {
            &.follow {
                padding: 0em .75em;
                .fi-eye {
                    font-size: 22px;
                    line-height: 16px;
                }
            }
            img {
                padding-right: 0;
            }
        }
        &.favorite {
            background: none;
            padding: 0;
            .icon-star {
                height: 1.8em;
                width: auto;
                fill: hsl(45, 5%, 77%);
            }

            &.selected{
                .icon-star {
                    fill: hsl(45, 100%, 51%);
                }
            }
        }

    }
    .dropdown.menu>li>a {
        padding-top: 0.4em;
        padding-bottom: 0.4em;
    }

    input {
        padding: 0.4em 0.75em;
        max-height: 30px;
    }

    a,
    button,
    input {
        vertical-align: middle;
        margin: 0;

        span {
            vertical-align: middle;
        }
    }
}

.search-input {
    margin-right: 0;
    max-width: 200px;
    display: inline-block;
}

.search-input__clear-button {
    color: #3f729b;
    font-weight: bold;
    border: 1px solid #cacaca;
    border-left: unset;
    padding: 0 0.5rem;
    display: none;
    cursor: pointer;
    align-items: center;
}

.search-wrapper {
    display: inline-flex;
    max-height: 30px;
    transform: translateY(1px);
}

.text-input-wrapper {
    display: inline-flex;
    width: 200px;

    input {
        padding: 0;
        margin: 0 !important;
        font: inherit;
        height: 100%;
    }
}

nav.second-bar .advanced_search {
    border: 1px solid #cacaca;
    border-inline-start: 0;
    padding: 0.15em 0.5em;
    transform: translateX(-5px);
    display: inline-block;
    position: relative;
}

html[dir='rtl'] nav.second-bar .advanced_search {
    transform: translateX(5px);
}

.advancedSearch-count {
    vertical-align: top;
    position: absolute;
    font-size: .45em;
    font-weight: bold;
    top: 0;
    left: 1.15rem;
}


.off-canvas-list {
    ul {
        margin-left: 0;

        li {
            a {
                border-bottom: 0;
            }
        }

        .dropdown {
            margin-left: 20px;
        }

        .off-canvas-padding {
            padding: 0 1rem;
        }
    }
}

#off-canvas {
    span.title {
        padding: 2rem 1rem 2rem 0;
        text-align: center;
        font-weight: 800;
        font-size: 1.3rem;
    }

    ul.is-at-top {
        padding-top: 10px;
    }
    ul.is-at-top li.nav-title div {
        margin-left: 1rem;
    }
}

.menu {
    input {
        margin-left: 1rem;
        margin-right: 1rem;
        width: 80%;
    }
}

.center-items {
    display: flex;
    align-items: center;
}

div.sticky-container {
    z-index: 1;
}

.title-bar {
    padding: 0.7rem;
        .logo-link {
            padding-inline-start:0;
            vertical-align: middle;
        }
        .logo {
            margin:0;
            height: 20px;
        }
}
.title-bar img {
    vertical-align: middle;
}

.is-dropdown-submenu {
    z-index: 5;
}
/*********************
POSTS & CONTENT STYLES
*********************/
#content {
    #inner-content {
        padding: 1rem 0;
        margin-left: 5px;
        margin-right: 5px;
    }

    article {
        //border: 1px solid $light-gray;
        margin-bottom: 10px;

        header {
            padding: 10px;
            //border-bottom: 1px solid $light-gray;
        }

        section {
            padding: 10px;
        }

        footer {
            padding: 10px;
            //border-top: 1px solid $light-gray;
            text-align: center;
        }

        a.button {
            float: left;
        }

        .article-header {
            .title {
                text-transform: uppercase;
            }
        }
    }
}
$bordered-box-padding: 1rem;

.bordered-box {
    border: 1px solid $light-gray;
    background-color: $white;
    padding: $bordered-box-padding;
    box-shadow: 0 2px 4px rgba(0,0,0,0.25);
    border-radius: 10px;
}
// Override table.dataTable styles in datatables.min.css to make the table grab
// the padding

.bordered-box table.dataTable {
    margin: 0.5em (-1 * $bordered-box-padding) !important; // !important needed to override another !important
    width: calc(100% + 2 * #{$bordered-box-padding});
}

i.large {
    font-size: 50px;
    line-height: 50px;
}
i.medium {
    font-size: 25px;
    line-height: 25px;
    transform: translateY(2px);
    display: inline-block;
}

button {
    cursor: pointer;

    &.clear {
        background-color: white;
        color: black;
        border: solid 1px #ccc;
    }
}

img {
    vertical-align: inherit;
}
/* ... */

